# flow

./: .gitignore  CONSIDERATIONS.md  README.md  new-feature.md  new-feature2.md  pyproject.toml
flow/: __main__.py  cli.py  collector.py  config.py  context.py  distiller.py  formatter.py  llm.py  memory.py  retriever.py  session.py
flow/parsers/: base.py  claude_code.py  codex.py  cursor.py
landing-page/: package-lock.json  package.json  tailwind.config.ts
landing-page template/: package-lock.json
landing-page template/app/: layout.tsx  page.tsx
landing-page template/app/docs/: page.tsx
landing-page template/components/: clouds-panorama.tsx  developer-section.tsx  footer.tsx  hero-section.tsx  home-section.tsx  logos.tsx  navbar.tsx  own-data-section.tsx
landing-page/app/: globals.css  page.tsx
landing-page/app/docs/: page.tsx
landing-page/components/: context-injection-section.tsx  demo-section.tsx  developer-section.tsx  hero-section.tsx  home-section.tsx  navbar.tsx  own-data-section.tsx  scroll-reveal.tsx  why-flow-section.tsx
scripts/: patch_mem0.py
tests/: eval_wake.py  test_ask.py  test_commands.py  test_context.py  test_e2e_workflow.py  test_formatter.py  test_parsers.py  test_session.py
tests/fixtures/: claude_code_session.jsonl  codex_session.jsonl  create_cursor_fixture.py
tests/fixtures/cursor_workspace/: state.vscdb
