[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flow"
version = "0.1.0"
description = "A CLI that helps you reclaim your context and reach flow state instantly."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "mem0ai>=1.0",
    "anthropic>=0.25",
    "openai>=1.0",
    "qdrant-client",
]

[project.scripts]
flow = "flow.cli:cli"
